[project]
name = "opensky-planetracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-webhook>=1.4.1",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "timezonefinder>=8.2.1",
    "webdriver-manager>=4.0.2",
]
